er ferdig med den men kan være jeg legger til mer sener

--- a/prosjekt/tic tac toe /index.html
+++ b/prosjekt/tic tac toe /index.html
@@ -9,16 +9,16 @@
 <body>
     <div class="game">
         <div class="game-title">Tic Tac Toe</div>
-        <div class="player">
+        <div id="player1" class="player">
             Player 1: <span id="player1Score">0</span>
         </div>
         <table id="game"></table>
-        <div class="player">
+        <div id="player2" class="player">
             Player 2: <span id="player2Score">0</span>
         </div>
         <div class="winner" id="winnerMessage"></div>
         <div class="draw" id="drawMessage"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="styles.js"></script>
 </body>
 </html>
