--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>Elias Ayaz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="game">
-        <div class="game-title">Tic Tac Toe</div>
-        <div class="player">
-            Player 1: <span id="player1Score">0</span>
-        </div>
-        <table id="game"></table>
-        <div class="player">
-            Player 2: <span id="player2Score">0</span>
-        </div>
-        <div class="winner" id="winnerMessage"></div>
-        <div class="draw" id="drawMessage"></div>
-    </div>
-    <script src="script.js"></script>
+    <header>
+        <h1>Elias Ayaz</h1>
+        <nav>
+            <a href="#about">Om meg</a>
+            <a href="#projects">Prosjekter</a>
+            <a href="#contact">Kontakt</a>
+        </nav>
+    </header>
+
+    <section id="about" class="section about">
+        <h2>Om meg</h2>
+        <p>Hei! Jeg heter Elias og her er mine Prosjekter.</p>
+    </section>
+
+    <section id="projects" class="section projects">
+    </section>
+
+    <section id="contact" class="section contact">
+        <h2>Kontakt</h2>
+        <p>Du kan kontakte meg på følgende måter:</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024/25 [Elias Ayaz]. Alle rettigheter reservert.</p>
+    </footer>
 </body>
 </html>
