--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <h1>Elias Ayaz</h1>
         <nav>
-            <a href="#about">Om meg</a>
-            <a href="#projects">Prosjekter</a>
-            <a href="#contact">Kontakt</a>
+            <a href="./prosjekt/engelsk ny/index.html">engelsk prosjekt</a>
+            <a href="./prosjekt/tic tac toe /index.html">Tic Tac Toe</a>
+            <a href="./prosjekt/coockie clicker/index.html">Cookie Clicker</a>
         </nav>
     </header>
 
